<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0E0E0E">


    <TextView
        android:id="@+id/textView1"
        android:layout_width="100dp"
        android:layout_height="32dp"
        android:text="TEMPERATURA"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/squareButton4"
        app:layout_constraintEnd_toEndOf="@+id/videoView"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/videoView"
        app:layout_constraintTop_toBottomOf="@+id/squareButton1"
        app:layout_constraintVertical_bias="0.095" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="102dp"
        android:layout_height="match_parent"
        android:layout_marginTop="248dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rounded_corners" />

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="102dp"
        android:layout_height="29dp"
        android:layout_marginTop="632dp"
        android:gravity="center"
        android:text="@string/Massa"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="100dp"
        android:layout_height="32dp"
        android:gravity="center"
        android:text="@string/Volume"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/squareButton4"
        app:layout_constraintEnd_toEndOf="@+id/videoView"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/videoView"
        app:layout_constraintTop_toBottomOf="@+id/squareButton1"
        app:layout_constraintVertical_bias="0.047" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="536dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rounded_corners" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="536dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rounded_corners" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="400dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rounded_corners" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="248dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rounded_corners" />

    <Button
        android:id="@+id/squareButton1"
        style="@style/CustomButtonStyle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:onClick="onSquareButtonClick1"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.393" />

    <Button
        android:id="@+id/squareButton2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/square_shape"
        android:onClick="onSquareButtonClick2"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.393" />

    <Button
        android:id="@+id/squareButton3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/square_shape"
        android:onClick="onSquareButtonClick3"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.396" />

    <Button
        android:id="@+id/squareButton4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/square_shape"
        android:onClick="onSquareButtonClick4"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.635" />

    <Button
        android:id="@+id/squareButton5"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/square_shape"
        android:onClick="onSquareButtonClick5"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.851" />

    <Button
        android:id="@+id/squareButton6"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/square_shape"
        android:onClick="onSquareButtonClick6"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.635" />

    <Button
        android:id="@+id/squareButton7"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/square_shape"
        android:onClick="onSquareButtonClick7"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.851" />

    <Button
        android:id="@+id/squareButton8"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/square_shape"
        android:onClick="onSquareButtonClick8"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.851" />

    <Button
        android:id="@+id/squareButton9"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/square_shape"
        android:onClick="onSquareButtonClick9"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.635" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="248dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rounded_corners" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="248dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/temperatura" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="100dp"
        android:layout_height="32dp"
        android:text="TEMPERATURA"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/squareButton4"
        app:layout_constraintEnd_toEndOf="@+id/videoView"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="@+id/videoView"
        app:layout_constraintTop_toBottomOf="@+id/squareButton1"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="100dp"
        android:layout_height="32dp"
        android:layout_marginTop="636dp"
        android:gravity="center"
        android:text="@string/Velocità"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="100dp"
        android:layout_height="32dp"
        android:layout_marginTop="636dp"
        android:gravity="center"
        android:text="@string/Orario"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="100dp"
        android:layout_height="32dp"
        android:gravity="center"
        android:text="@string/area"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/squareButton4"
        app:layout_constraintEnd_toEndOf="@+id/videoView"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="@+id/videoView"
        app:layout_constraintTop_toBottomOf="@+id/squareButton1"
        app:layout_constraintVertical_bias="0.095" />

    <TextView
        android:id="@+id/textViewab"
        android:layout_width="100dp"
        android:layout_height="32dp"
        android:layout_marginTop="500dp"
        android:gravity="center"
        android:text="@string/Lunghezza"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewac"
        android:layout_width="100dp"
        android:layout_height="32dp"
        android:layout_marginTop="504dp"
        android:gravity="center"
        android:text="@string/Mancia"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView11"
        android:layout_width="100dp"
        android:layout_height="32dp"
        android:layout_marginTop="500dp"
        android:gravity="center"
        android:text="@string/Dati"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="248dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/videoView"
        app:srcCompat="@drawable/rounded_corners" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="143dp"
        android:layout_height="139dp"
        android:layout_marginTop="228dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/volume" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="536dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rounded_corners" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="400dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rounded_corners" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="400dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rounded_corners" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="248dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/area" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="105dp"
        android:layout_height="99dp"
        android:layout_marginTop="400dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lunghezza" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="392dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dati" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="536dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/massa" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="536dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/orario" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="88dp"
        android:layout_height="92dp"
        android:layout_marginTop="536dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/velocit_" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="392dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mancia" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="236dp"
        android:layout_height="237dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_uconvert2" />


</androidx.constraintlayout.widget.ConstraintLayout>
